# cuda-bimp

./: CMakeLists.txt  README.md
bimp/: CMakeLists.txt  bimp.pc.in
bimp/include/detection/: bimp.hpp  convolutionFFT2D.cuh  convolutionFFT2D_common.h  cuda_bimp.cuh  cuda_bimp.hpp  utils.hpp
bimp/src/: bimp.cpp  convolutionFFT2D.cu  convolutionFFT2D_gold.cpp  cuda_bimp.cpp  cuda_bimp.cu  utils.cpp
example_bimp/: CMakeLists.txt
example_bimp/src/: example_bimp.cpp
scripts/: README.md  build-opencv.sh  cmake-opencv.sh  delete-opencv.sh  download-opencv.sh
utils/: CMakeLists.txt  caltech_to_ascii.m
utils/include/detection/: benchmark.h  util.h  utils.hpp
utils/src/: benchmark.cpp  utils.cpp
